fix(@vtmn/css-card): align padding between variants (#1366)

--- a/packages/sources/css/src/components/structure/card/src/index.css
+++ b/packages/sources/css/src/components/structure/card/src/index.css
@@ -137,7 +137,7 @@
   inset-inline-start: 0;
   inset-inline-end: 0;
   inset-block-end: 0;
-  padding: var(--vtmn-spacing_5);
+  padding: var(--vtmn-spacing_4);
   block-size: auto;
   border-radius: var(--vtmn-radius_200);
   color: var(--vtmn-semantic-color_content-primary-reversed);
